--- a/practice.html
+++ b/practice.html
@@ -18,7 +18,7 @@
         	lolita lolita complex lolicon
         </p>
         <em>
-        	Loli is good
+        	Roses are red, violets are blue, my love to loli is more than your mom's love to you
         </em>
         
         <p style="color:green">
